--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   server:
     path: build/api-binding/client
   cupertino_icons: ^1.0.2
+  provider: ^6.0.5
+  go_router: ^6.0.9
 
 dev_dependencies:
   flutter_test:
