--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
   go_router: ^6.0.9
+  file_picker: ^5.2.5
 
 dev_dependencies:
   flutter_test:
