--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   provider: ^6.0.5
   go_router: ^6.0.9
   file_picker: ^5.2.5
+  fluttertoast: ^8.2.1
 
 dev_dependencies:
   flutter_test:
