#9 save parsed data in mongoDB, add docker compose for mongoDB, change test setup, handle errors

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -32,6 +32,14 @@ jobs:
           channel: 'stable'
           cache: true
 
+      - name: Setup MongoDB
+        uses: supercharge/mongodb-github-action@1.8.0
+        with:
+          mongodb-version: 6.0
+          mongodb-username: root
+          mongodb-password: example
+          mongodb-db: budget-turtle
+
       - name: Assemble ${{matrix.module}}
         run: ./gradlew ${{matrix.module}}:assemble
 
