--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   go_router: ^6.0.9
   file_picker: ^5.2.5
   fluttertoast: ^8.2.1
+  infinite_scroll_pagination: ^3.2.0
 
 dev_dependencies:
   flutter_test:
